Fix button overlaps

--- a/src/css/areas/header.less
+++ b/src/css/areas/header.less
@@ -8,6 +8,7 @@
     min-height: 100%;
     width: 100%;
     height: 100%;
+    z-index: @z-index-4;
 
     .bg-img {
         position: absolute;
@@ -65,7 +66,6 @@
         height: @btn-size-m;
         width: @btn-size-m;
         padding: 0;
-        z-index: @z-index-5;
     }
 }
 
