--- a/src/css/elements/figure.less
+++ b/src/css/elements/figure.less
@@ -5,6 +5,10 @@
     margin: 0 0 1rem;
     position: relative;
 
+    a {
+        display: block;
+    }
+
     img {
         width: 100%;
     }
